# smssender

./: .gitignore  CMakeLists.txt  gateway.cpp  gateway.h  main.cpp  smsc.cpp  smsc.h
